--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,12 @@
             "email": "augustin.kavera@outlook.fr"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "controllers\\": "controllers",
+            "models\\": "models"
+        }
+    },
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "^6.5"
