Ajout de ContactController, LoginController, ContactManager, Contact, Login
Modification de TicketManager, composer.json, des classes models, des views.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "autoload": {
         "psr-4": {
             "controllers\\": "controllers",
-            "models\\": "models"
+            "models\\": "models",
+            "views\\": "views"
         }
     },
     "require": {},
